src/snapshots/yaml_subset__tests__alternative_hash_comment_between_first_and_second-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
parts:
  - type: choose_one
    # prompt: "file:statement-wrong.html"
    answer_data: tmp
