src/snapshots/yaml_subset__tests__alternative_hash_comment_between_first_and_second.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "parts",
                                value: AliasedYaml {
                                    alias: None,
                                    value: Array(
                                        [
                                            Element(
                                                AliasedYaml {
                                                    alias: None,
                                                    value: Hash(
                                                        [
                                                            Element(
                                                                HashElement {
                                                                    key: "type",
                                                                    value: AliasedYaml {
                                                                        alias: None,
                                                                        value: UnquotedString(
                                                                            "choose_one",
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                            Comment(
                                                                " prompt: \"file:statement-wrong.html\"",
                                                            ),
                                                            Element(
                                                                HashElement {
                                                                    key: "answer_data",
                                                                    value: AliasedYaml {
                                                                        alias: None,
                                                                        value: UnquotedString(
                                                                            "tmp",
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
