src/snapshots/yaml_subset__tests__array_delimiters_in_text-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
default_value: random(-9 .. 9 except [0, a])
