src/snapshots/yaml_subset__tests__array_delimiters_in_text.snap
---
source: src/lib.rs
expression: parsed
---
Ok(
    Document {
        leading_comments: [],
        items: [
            Yaml(
                Hash(
                    [
                        Element(
                            HashElement {
                                key: "default_value",
                                value: AliasedYaml {
                                    alias: None,
                                    value: UnquotedString(
                                        "random(-9 .. 9 except [0, a])",
                                    ),
                                },
                            },
                        ),
                    ],
                ),
            ),
        ],
    },
)
