src/snapshots/yaml_subset__tests__block_delimiters_in_text-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
content: When you press <em>Submit part</em>.
abs: An absolute value is written as |x|
