src/snapshots/yaml_subset__tests__block_scalars-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
newlines: &newline |
  Several lines of text,
  with some "quotes" of various 'types',
  and also a blank line:
  
  and some text with
    extra indentation
  on the next line,
  plus another line at the end.
  
folded: &folded >
  Several lines of text,
  with some "quotes" of various 'types',
  and also a blank line:
  
  and some text with
    extra indentation
  on the next line,
  plus another line at the end.
  
  
  
test: 5
