src/snapshots/yaml_subset__tests__block_scalars_deeper-2.snap
---
source: src/lib.rs
expression: parsed.unwrap().format().unwrap()
---
---
parts:
  - type: gapfill
    marks: 0
    prompt:
      content: test
      other: |
        8
        10
